# smt-man

./: .clang-format  .gitignore  .gitmodules  .ignore  CMakeLibraries.txt  CMakeLists.txt  flake.nix  pyproject.toml
cmake/: FindCriterion.cmake
include/: anima.h  anima.hpp  constants.h  enums.h  logic.h  macro.h  maze.h  maze.hpp  misc.h  pairs.h  random.h  render.h  setup.h  smt_z3.h  sprite.h  sprite.hpp  surface.h  temp.h  toys.h  toys.hpp  unethical.hpp  utils.h  utils.hpp
include/anima/: abstract.h
include/generic/: bitvec.h  pairs.h
include/logic/: abstractions.h  situation.h  synchronization.h
include/lyf/: anima.h  persona.h  tick.h
include/lyf/anima/: abstract.h  mind.h
include/render/: NSTimer.h  constants.h  palette.h  render.h  rgb_momentum.h  sheet.h  sprite.h  surface.h  timer_nano.h
include/sprites/: anima.h  persona.h  sprite.h
include/templates/: arithmetic_template.h  pair_template.h  template_bitvec.h
include/utils/: NVec.h  pairs.h
include/visual/: textures.hpp
lib/: CMakeLists.txt
lib/include/: constants.h  enums.h  err.h  logic.h  macro.h  maze.h
lib/include/SML/: enums.h  logic.h  maze.h  maze_path.h
lib/include/SML/logic/: abstractions.h  enums.h  situation.h  synchronization.h
lib/include/SML/sprite/: anima.h  persona.h
lib/include/generic/: arithmetic.h  bitvec.h  enums.h  pairs.h  vec.h
lib/include/generic/templates/: pair_template.h  template_bitvec.h
lib/include/logic/: abstractions.h  situation.h  synchronization.h
lib/include/sprites/: anima.h  persona.h  sprite.h
lib/include/sprites/anima/: mind.h
lib/src/core/: maze.c  maze_path.c
lib/src/logic/: logic.c  synchronization.c
lib/src/sprites/: anima.c  persona.c
lib/src/sprites/anima/: anima.c
resources/maze/: lines.txt  source.txt
scratch/: rotation.py
smt/: anima.smt2  explorations.py  explorations2.py  pyproject.toml
smt-man-py/: pyproject.toml
smt-man-py/src/smt_man/: __init__.py  language.py  maze.py  mind.py  path4.py  path7.py  types.py
src/: main.c  main.cpp  persona.c  setup.c  z3.c  z3_scratch.c
src/anima/: anima.c  anima.cpp  body.c  deduction.c  deduction.cpp  mind.c
src/core/: maze.c  sprite.c  surface.c
src/logic/: core.c  logic.c  synchronization.c
src/render/: NSTimer.c  render.c  sheet.c
src/sprites/: persona.c
src/sprites/anima/: anima.c  mind.c
src/utils/: NSTimer.c  etc.c  pair.c  utils.cpp  utils.hpp
src/visual/: textures.cpp
